# articles

patterns/20200221/: .gitignore  CMakeLists.txt  README.md  example.cpp
patterns/2020_09_10/: unidirectional_data_flow.md
patterns/2020_09_10/example/: CMakeLists.txt  action.hpp  dispatcher.hpp  main.cpp  store.hpp  view.cpp  view.hpp
patterns/2020_09_13/: concept.md
patterns/2020_09_13/source/: ABCImpl.py  CMakeLists.txt  DynConceptImpl.cpp  NormalImpl.cpp  NormalImpl.py  ProtocalsImpl.py
patterns/2020_09_13/source/goexample/: impl.go
patterns/2020_09_16/: json_library_design_by_language.md
patterns/2020_10_07/: message_patterns.md
patterns/2020_10_07/cImpl/: CMakeLists.txt  bus.cpp  pair.cpp  pipeline.cpp  pubsub.cpp  reqrep.cpp  survey.cpp
patterns/2020_10_07/cppImpl/: CMakeLists.txt  bus.cpp  pair.cpp  pipeline.cpp  pubsub.cpp  reqrep.cpp  survey.cpp
patterns/2020_10_19/: prefab_show.md
patterns/2020_10_19/prefab/: .editorconfig  CMakeLists.txt  prefab.md
patterns/2020_10_19/prefab/cmake/: PackageConfig.cmake.in
patterns/2020_10_19/prefab/examples/: CMakeLists.txt  example.cpp
patterns/2020_10_19/prefab/include/prefab/: HashedTypeInfo.hpp  IComponent.hpp  IEntity.hpp  IRepository.hpp  IValue.hpp  Registory.hpp  Repository.hpp
patterns/2020_10_19/prefab/src/: Repository.cpp
patterns/2020_11_15/: cpp_type_erasure_apply.md
patterns/20210913/: Broker.hpp  Broker.md  CMakeLists.txt  JsonIO.cpp  JsonIO.hpp  example.cpp
patterns/20211120/: CMakeLists.txt  app.cpp  message_system_design.md  observer.hpp  publisher.hpp
patterns/20211203/: CMakeLists.txt  app.cpp  broker.hpp  broker.md
patterns/20220313/: CMakeLists.txt  dispatcher.hpp  example.cpp
patterns/20220703/: .gitignore  CMakeLists.txt  CppPyMixin.md  README.md  Test.py  build.bat
patterns/20220703/app/: App.cpp  CMakeLists.txt
patterns/20220703/assets/: CppPyMixin.excalidraw
patterns/20220703/libs/Actor/: Actor.cpp  Actor.h  ActorApi.h  CMakeLists.txt
patterns/20220703/libs/PyActor/: CMakeLists.txt  PyActor.cpp
patterns/20220703/libs/PyPlugin/: CMakeLists.txt  PyPlugin.cpp  PyPlugin.h
patterns/20220703/pybind11/: CMakeLists.txt
patterns/20220709/: .gitignore  App.cpp  CMakeLists.txt  Observer.hpp  Observer.md
patterns/20220720/: 交互层设计方案.excalidraw
patterns/20220723/: CMakeLists.txt  DeployQtRuntime.cmake  Editor.md
patterns/20220723/source/: AnyVector.hpp  CMakeLists.txt  main.cpp
patterns/20220723/source/Actors/: PanActor.cpp  PanActor.hpp  ZoomActor.cpp  ZoomActor.hpp
patterns/20220723/source/Command/: CommandIds.hpp  CommandRunner.cpp  CommandRunner.hpp  ICommand.hpp  PointDrawCommand.cpp  PointDrawCommand.hpp  ViewCommand.cpp  ViewCommand.hpp
patterns/20220723/source/UiService/: Inputers.cpp  Inputers.hpp  UiContext.hpp  UiService.cpp  UiService.hpp
patterns/20220723/source/View/: ApplicationView.cpp  ApplicationView.hpp  GraphicsView.hpp
patterns/20220729/: Aggregator.cpp  Aggregator.md  CMakeLists.txt
patterns/20220820/: CMakeLists.txt  ContainerView.cpp  ExposeInnerContainerApi.md
patterns/20220913/: CMakeLists.txt  DRGraph.cpp  DRGraph.hpp  DRGraph.md  DRGraphApp.cpp  Graph.cpp  Graph.hpp
patterns/20221001/: CMakeLists.txt  DataSet.cpp  DataSet.h  DataSetCluster.hpp  Project.cpp  plf_hive.h
patterns/20221003/: AppGraph.cpp  CMakeLists.txt  DataSetCluster.md  Graph.cpp  Graph.hpp
patterns/20230428/: CMakeLists.txt  README.md  example.cpp
practices/: 20210202_PolymorphicValue.md  Build_gRPC.md  CMakeDeployQtApplication.md  PlantUML.md  report.md  基于sol2整合Lua到C++应用(1).md
practices/20201015/: container_like_class.md  example.py  example1.py
practices/20201226/: cppTemplatePartialSpecialization.md
practices/2020_09_21/: cxxcodegen_by_libclang_python.md
practices/20210112/: CMakeLists.txt  GraphicsView.cpp  GraphicsView.hpp  GraphicsView.py  README.md  main.cpp
practices/20210123/: CMakeLists.txt  Dispatcher.hpp  GraphicsViewHandler.hpp  README.md  main.cpp
practices/20210206/: .editorconfig  CMakeLists.txt  QColorRect.cpp  QColorRect.hpp  Qt&Coroutine.md  main.cpp
practices/20210206/cmake/: DeployQtRuntime.cmake
practices/20210211/: CMakeLists.txt  README.md  example.cpp  factory.hpp
practices/20210212/: README.md  example.py
practices/20210217/: compile_score.md
practices/20210905/: gather.cpp
practices/20211007/: CMakeLists.txt  example.cpp  example.hpp  members.hpp  print.hpp
practices/20211007/cmake/: create_members_file.cmake  members.py
practices/20211130/: RuntimeAssert.cpp
practices/20211215/: CMakeLists.txt  README.md  example.cpp  repository.hpp  repository.md
practices/20220120/: CMakeLists.txt  README.md  example.cpp  iterator_facade.h
practices/20220124/: CMakeLists.txt  complex_value.hpp  example.cpp
practices/20220227/: CMakeLists.txt  README.md
practices/20220228/: CMakeLists.txt  README.md  example.cpp
practices/20220311/: CMakeLists.txt  chain.hpp  example.cpp
practices/20220318/: README.md  archive.cpp  archive.h  meta.h
practices/20220319/: Archive.md  ArchiveImpl.md  CMakeLists.txt  README.md
practices/20220323/: Graph.cpp  Graph.hpp  Notifyer.h  Notifyer.hpp  README.md  invariant.cpp  invariant_guard.cpp
practices/20220415/: Actor.cpp  Actor.hpp  CMakeLists.txt  README.md  exActor.cpp
practices/20220508/: AUser.cpp  AnySubject.cpp  AnySubject.hpp  App.cpp  BUser.cpp  CMakeLists.txt  IndexableTypeIDGenerate.md  TypeRegistry.cpp  TypeRegistry.hpp
practices/20220509/: CMakeLists.txt  Repo.cpp  Repo.hpp  RepoImpl.hpp  SimpifyRepo.md  example.cpp
practices/20220511/: Decorator.cpp  ExtendApi.md  Proxy.hpp  Proxy.md
practices/20220830/: As.hpp  AsApp.cpp  CMakeLists.txt  DataRef.hpp  DataRefApp.cpp
practices/20221118/: AppRegistry.cpp  CMakeLists.txt  CommandA.cpp  CommandB.cpp  Commands.cpp  ExtensionAB.cpp  Extensions.cpp  ICommand.cpp  ICommand.hpp  IExtension.cpp  IExtension.hpp  RegistryStub.hpp  RegistryTemplate.hpp  TemplateUsecase.md
practices/20230202/ImplValue/: CMakeLists.txt  ImplValue.h  ImplValue.natvis  ImplValueApp.cpp  Printer.cpp  Printer.h
(+73 files in other folders)
